# lapcruncher

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readme.md  requirements.txt
src/: setup.py
src/lapcruncher/: ingest.py  models.py  plot.py  transform.py  types.py
