[project]
name = "lapcruncher"
version = "0.1.0"
description = "Lap stats for bike racing"
authors = [{ name = "Jeroen Boeye" }, { name = "Joris Boeye" }]
dependencies = [
    "geopy>=2.4.1",
    "gpxpy>=1.6.2",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lapcruncher"]
